--- a/wine quality.ipynb
+++ b/wine quality.ipynb
@@ -31,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_excel(r'E:\\datasets\\wine quality.xlsx')"
+    "df = pd.read_excel(r'path\to\wine quality.xlsx')"
    ]
   },
   {
